Fix mobile menu styles and update togglability of elements on mobile. Fix invisible panels so that they do not interfere with mouse clicks.

--- a/kronofoto/static/assets/scss/templates/mainstreet.scss
+++ b/kronofoto/static/assets/scss/templates/mainstreet.scss
@@ -5,6 +5,22 @@
 
 [route="mainstreetview"] {
 
+  @media (max-width: 63.99875em) {
+    .psv-plan--collapsed {
+      width: 100% !important;
+      height: 100% !important;
+      > * {
+        opacity: 1;
+      }
+    }
+  }
+
+  .photosphere:not([current_item=set_description]) .photosphere__set_description {
+    @media (max-width: 63.99875em) {
+      display: none;
+    }
+  }
+
   // Custom mainstreet mobile header
   @include breakpoint(xlarge only) {
 
@@ -88,6 +104,10 @@
     top: 50%;
     padding: 48px 25px 25px 25px;
     transform: translateX(50%) translateY(-50%);
+    pointer-events: none;
+    &--open {
+      pointer-events: all;
+    }
     &-resizer {
       display: none;
     }
@@ -108,12 +128,15 @@
     &-close-button, &-close-button:hover {
       width: 11px !important;
       height: 11px !important;
-      right: 15px;
-      top: 15px;
+      padding: 18px;
+      background-size: 11px 11px;
+      background-position: center;
+      top: 0px;
+      right: 0px;
       background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12.021' height='12.021' viewBox='0 0 12.021 12.021'%3E%3Cg id='X' transform='translate(-466.793 -97.455)'%3E%3Cline id='Line_22' data-name='Line 22' x2='15' transform='translate(467.5 98.162) rotate(45)' fill='none' stroke='%23333' stroke-width='2'/%3E%3Cline id='Line_24' data-name='Line 24' x2='15' transform='translate(478.106 98.162) rotate(135)' fill='none' stroke='%23333' stroke-width='2'/%3E%3C/g%3E%3C/svg%3E%0A");
       background-repeat: no-repeat;
-      background-size: cover;
       background-color: transparent;
+      opacity: 0.8;
       svg {
         display: none;
       }
@@ -314,12 +337,6 @@
     }
   }
 
-
-  .photosphere {
-
-  }
-
-
   .psv-plan__button[title="Maximize"] {
     background-image: url("data:image/svg+xml,%3Csvg id='Group_193' data-name='Group 193' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='22' height='22' viewBox='0 0 22 22'%3E%3Cdefs%3E%3CclipPath id='clip-path'%3E%3Crect id='Rectangle_205' data-name='Rectangle 205' width='22' height='22' fill='none' stroke='%23707070' stroke-width='2.5'/%3E%3C/clipPath%3E%3C/defs%3E%3Cg id='Group_192' data-name='Group 192'%3E%3Cg id='Group_191' data-name='Group 191' clip-path='url(%23clip-path)'%3E%3Cpath id='Path_103' data-name='Path 103' d='M1.5,14.546v7.161H8.661' transform='translate(-0.113 -1.095)' fill='none' stroke='%23707070' stroke-miterlimit='10' stroke-width='2.5'/%3E%3Cpath id='Path_104' data-name='Path 104' d='M21.708,8.661V1.5H14.546' transform='translate(-1.095 -0.113)' fill='none' stroke='%23707070' stroke-miterlimit='10' stroke-width='2.5'/%3E%3Cpath id='Path_105' data-name='Path 105' d='M8.6,14.613l-.634.634L1.5,21.713' transform='translate(-0.113 -1.1)' fill='none' stroke='%23707070' stroke-miterlimit='10' stroke-width='2.5'/%3E%3Cline id='Line_56' data-name='Line 56' x1='6.466' y2='6.466' transform='translate(14.147 1.387)' fill='none' stroke='%23707070' stroke-miterlimit='10' stroke-width='2.5'/%3E%3Cpath id='Path_106' data-name='Path 106' d='M1.5,14.546v7.161H8.661' transform='translate(-0.113 -1.095)' fill='none' stroke='%23707070' stroke-miterlimit='10' stroke-width='2.5'/%3E%3Cpath id='Path_107' data-name='Path 107' d='M21.708,8.661V1.5H14.546' transform='translate(-1.095 -0.113)' fill='none' stroke='%23707070' stroke-miterlimit='10' stroke-width='2.5'/%3E%3Cpath id='Path_108' data-name='Path 108' d='M8.6,14.613l-.634.634L1.5,21.713' transform='translate(-0.113 -1.1)' fill='none' stroke='%23707070' stroke-miterlimit='10' stroke-width='2.5'/%3E%3Cline id='Line_57' data-name='Line 57' x1='6.466' y2='6.466' transform='translate(14.147 1.387)' fill='none' stroke='%23707070' stroke-miterlimit='10' stroke-width='2.5'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E%0A");
     left: auto;
@@ -354,6 +371,17 @@
     display: flex;
     flex-direction: column;
 
+    &[current_item=images] .photosphere__timeline {
+      display: block;
+    }
+
+    &[current_item=set_description] .photosphere__set_description {
+      @include breakpoint(medium down) {
+        display: block;
+      }
+    }
+
+
     &__view {
       width: 100%;
       height: 100%;
@@ -380,6 +408,7 @@
     &__timeline {
       z-index: 10;
       display: none;
+
       @include breakpoint(large up) {
         display: block;
       }
@@ -621,10 +650,19 @@
   }
 }
 
-.psv-plan--collapsed {
+.psv-plan {
   @include breakpoint(medium down) {
-    width: 0px !important;
-    height: 0px !important;
+    opacity: 0;
+    pointer-events: none;
+    max-width: none !important;
+    max-height: none !important;
+    margin: 0px;
+    left: 0px;
+    right: 0px;
+    [current_item=map] & {
+      opacity: 1;
+      pointer-events: all;
+    }
   }
 }
 
@@ -643,28 +681,36 @@
   }
   @include breakpoint(medium down) {
     display: none;
+    [current_item=navbar] & {
+      display: flex;
+    }
     left: calc(50% + 65px);
+
     .psv-button {
-      display: none;
+      width: 0px !important;
+      opacity: 0;
+      margin: 0px !important;
+      padding: 0px !important;
       &.photo-opacity-input-navbar-button, &.photo-timeline-link-navbar-button {
-        display: inline-block;
+        width: auto !important;
+        opacity: 1;
       }
     }
   }
   .psv-menu-button {
     display: none !important;
   }
-  .psv-button:not(.psv-menu-buton) {
+  .psv-button:not(.psv-menu-button) {
     display: block !important;
     background-position: center;
     background-repeat: no-repeat;
   }
 }
 
-.psv-zoom-range {
-  width: 100px !important;
+.psv-zoom-range.psv-button {
+  width: 100px;
   &-line {
-    width: 100px !important;
+    width: 100px;
   }
 }
 
